--- a/views/index.html
+++ b/views/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html>
-<head>
-<title>Block de notas</title>
-<link rel="stylesheet" type="text/css" href="style.css">
-</head>
-<body>
-<div class="container">
-<div class="header">
-<h1>Block de notas</h1>
-</div>
-<div class="editor" contenteditable></div>
-</div>
+<html lang="es">
+  <head>
+  <title>Block de notas Ger</title>node
+  <link rel="stylesheet" type="text/css" href="style.css">
+  </head>
+  <body>
+    <div class="container">
+      <div class="header">
+        <h1>Block de Ger</h1>
+      </div>
+    <div class="editor" contenteditable></div>
+    </div>
 
-<script src="script.js"></script>
-</body>
+    <script src="script.js"></script>
+  </body>
 </html>
