--- a/public/style.css
+++ b/public/style.css
@@ -31,4 +31,23 @@ body {
     box-sizing: border-box;
     border: solid 1px #ccc;
     }
-    
+   
+    .header {
+    width: 100%;
+    height: 50%px;
+    background-color: #333;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    padding-left: 20px;
+    box-sizing:border-box;
+  }
+
+  .editor {
+    width: 80px;
+    height: calc(100vh 50px);
+    background-color: #fff;
+    padding: 20px;
+    box-sizing: border-box;
+    border: solid 1px #ccc;
+  }
