--- a/views/index.html
+++ b/views/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-  <h1>Bloc de Notas</h1>
+  <h1>Bloc de Notas-Anamnesis</h1>
   <div class="nota">
     <textarea id="texto" rows="10" cols="50"></textarea>
     <div class="botones">
@@ -17,4 +17,16 @@
 
   <script src="script.js"></script>
 </body>
+<footer class="footer">
+
+    <div> class="wrap"-footer">
+      <div class="text-element-footer element footer-footer">
+        </div>"
+          <img src="pensarenpsicologia.jpg" alt="logo" />
+    </div>
+
+    <div class="text-element-footer text-element-footer"></div>
+    <h5>La sonrisa es lo que mejor te queda</h5>
+    
+</footer>
 </html>
