Se agrega imagenes

--- a/public/styles.css
+++ b/public/styles.css
@@ -10,8 +10,8 @@ h1 {
 
 .nota {
   margin-top: 20px;
-  background-color: #f9f9f9;
-  border: 1px solid #ccc;
+  background-color: #f5d940;
+  border: 1px solid #530ee8;
   padding: 10px;
 }
 
