--- a/views/index.html
+++ b/views/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Bloc de Notas</title>
+  <title>Bloc de Notas Ultimate</title>
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
@@ -16,17 +16,23 @@
   </div>
 
   <script src="script.js"></script>
+
+  <section>
+  <img src="vivir_psicologia" alt="Ps Educativa" width="400px" height="200px"/>
+  </section>
 </body>
+
 <footer class="footer">
 
     <div> class="wrap"-footer">
       <div class="text-element-footer element footer-footer">
-        </div>"
-          <img src="pensarenpsicologia.jpg" alt="logo" />
+        
+      <img src="pensarenpsicologia.jpg" alt="imagen" width="100%" height="100%"/>
+    
     </div>
 
     <div class="text-element-footer text-element-footer"></div>
-    <h5>La sonrisa es lo que mejor te queda</h5>
-    
+    <h2>La sonrisa es lo que mejor te queda</h2>
+
 </footer>
 </html>
