completar CSS footer

--- a/views/index.html
+++ b/views/index.html
@@ -23,16 +23,9 @@
 </body>
 
 <footer class="footer">
-
-    <div> class="wrap"-footer">
-      <div class="text-element-footer element footer-footer">
-        
-      <img src="pensarenpsicologia.jpg" alt="imagen" width="100%" height="100%"/>
-    
-    </div>
-
-    <div class="text-element-footer text-element-footer"></div>
-    <h2>La sonrisa es lo que mejor te queda</h2>
-
+  <div>  
+  <img src="pensarenpsicologia.jpg" alt="imagen" width="100%" height="100%"/>  
+  </div>
+  <h2>"La sonrisa, es lo que mejor te queda"</h2>
 </footer>
 </html>
