--- a/views/index.html
+++ b/views/index.html
@@ -22,10 +22,10 @@
   </section>
 </body>
 
-<footer class="footer">
-  <div>  
-  <img src="pensarenpsicologia.jpg" alt="imagen" width="100%" height="100%"/>  
-  </div>
-  <h2>"La sonrisa, es lo que mejor te queda"</h2>
-</footer>
+  <footer style="text-align: center; background-color: black; color: white">
+    <p>Tu sonrisa es lo que mejor te queda</p>
+    <p><a href="https://instagram.com/tu_usuario" target="_blank">Instagram</a> | <a href="https://facebook.com/tu_usuario" target="_blank">Facebook</a></p>
+    <p>Sigueme en redes sociales</p>
+  </footer>
+
 </html>
