botones RRSS en footer

--- a/views/index.html
+++ b/views/index.html
@@ -23,7 +23,7 @@
 </body>
 
   <footer style="text-align: center; background-color: black; color: white">
-    <p>Tu sonrisa es lo que mejor te queda</p>
+    <h2>"Tu sonrisa es lo que mejor te queda"</h2>
     <p><a href="https://instagram.com/tu_usuario" target="_blank">Instagram</a> | <a href="https://facebook.com/tu_usuario" target="_blank">Facebook</a></p>
     <p>Sigueme en redes sociales</p>
   </footer>
