Completar index y css

--- a/views/index.html
+++ b/views/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-  <h1>Bloc de Notas-Anamnesis</h1>
+  <h1 style="color: blue; background-color: yellow">Bloc de Notas de Ger</h
   <div class="nota">
     <textarea id="texto" rows="10" cols="50"></textarea>
     <div class="botones">
@@ -18,11 +18,11 @@
   <script src="script.js"></script>
 
   <section>
-  <img src="vivir_psicologia" alt="Ps Educativa" width="400px" height="200px"/>
+  <img src="vivir_psicologia.jpg" alt="Ps Educativa" width="200px" height="100px"/>
   </section>
 </body>
 
-  <footer style="text-align: center; background-color: black; color: white">
+  <footer style="text-align: center; background-color: rgb(16, 211, 81); color: white">
     <h2>"Tu sonrisa es lo que mejor te queda"</h2>
     <p><a href="https://instagram.com/tu_usuario" target="_blank">Instagram</a> | <a href="https://facebook.com/tu_usuario" target="_blank">Facebook</a></p>
     <p>Sigueme en redes sociales</p>
