Vincular con web personal

--- a/views/index.html
+++ b/views/index.html
@@ -19,13 +19,15 @@
 
   <section>
   <img src="vivir_psicologia.jpg" alt="Ps Educativa" width="200px" height="100px"/>
-  </section>
+  <p>Acerca de mi:</p>
+  <a href="https://sites.google.com/d/11Y4qrtDgssjxR_O3XbC0T088BZZ7QwFD/p/1BMbRaOV-dupyz7muCZoXkokPjuosQHA5/edit" target="_blank">Enlace a Google Sites</a>
+
+</section>
 </body>
 
   <footer style="text-align: center; background-color: rgb(16, 211, 81); color: white">
     <h2>"Tu sonrisa es lo que mejor te queda"</h2>
     <p><a href="https://instagram.com/tu_usuario" target="_blank">Instagram</a> | <a href="https://facebook.com/tu_usuario" target="_blank">Facebook</a></p>
-    <p>Sigueme en redes sociales</p>
   </footer>
 
 </html>
