--- a/views/index.html
+++ b/views/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="es"> 
 <head>
-  <title>Bloc de Notas Ultimate</title>
+  <title>APPdeNotasUltimate</title>
   <script src="script.js"></script>
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
+
 <body>
-  <h1 style="color: blue; background-color: yellow">Bloc de Notas de Ger</h
+  <h1>"APP de Notas de Ger"</h1>
+
   <div class="nota">
     <textarea id="texto" rows="10" cols="50"></textarea>
     <div class="botones">
@@ -16,17 +18,21 @@
     </div>
   </div>
 
-  <section>
-  <img src="vivir_psicologia.jpg" alt="Ps Educativa" width="200px" height="100px"/>
-  <p>Acerca de mi:</p>
-  <a href="https://sites.google.com/d/11Y4qrtDgssjxR_O3XbC0T088BZZ7QwFD/p/1BMbRaOV-dupyz7muCZoXkokPjuosQHA5/edit" target="_blank">Enlace a Google Sites</a>
+  <!--TODO separar seccion con linea horizontal(hr) con imagenes y enlace google-->
 
-</section>
+  <hr
+
+  <div>
+    <img class="foto-Ger" src="vivir_psicologia.jpg" alt="Ps Educativa"/>
+    <p>Acerca de mi:</p>
+    <a href="https://sites.google.com/d/11Y4qrtDgssjxR_O3XbC0T088BZZ7QwFD/p/1BMbRaOV-dupyz7muCZoXkokPjuosQHA5/edit" target="_blank">Enlace a Google Sites</a>
+  </div>
+
 </body>
 
   <footer style="text-align: center; background-color: rgb(16, 211, 81); color: white">
     <h2>"Tu sonrisa es lo que mejor te queda"</h2>
-    <p><a href="https://instagram.com/tu_usuario" target="_blank">Instagram</a> | <a href="https://facebook.com/tu_usuario" target="_blank">Facebook</a></p>
+    <p><small><a href="https://instagram.com/tu_usuario" target="_blank">Instagram</a> | <a href="https://facebook.com/tu_usuario" target="_blank">Facebook</a><small></small></p>
   </footer>
 
 </html>
