verificar conexion con script js

--- a/views/index.html
+++ b/views/index.html
@@ -2,7 +2,7 @@
 <html lang="es"> 
 <head>
   <title>APPdeNotasUltimate</title> 
-  <link rel="stylesheet" type="text/css" href="styles.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -26,12 +26,14 @@
   <p>Acerca de mi:</p>
   <a href="https://sites.google.com/d/11Y4qrtDgssjxR_O3XbC0T088BZZ7QwFD/p/1BMbRaOV-dupyz7muCZoXkokPjuosQHA5/edit" target="_blank">Enlace a Google Sites</a>
 
-  <script src="script.js"></script>
-</body>
+ 
 
   <footer style="text-align: center; background-color: rgb(16, 211, 81); color: white">
     <h2>"Tu sonrisa es lo que mejor te queda"</h2>
     <p><small><a href="https://instagram.com/tu_usuario" target="_blank">Instagram</a> | <a href="https://facebook.com/tu_usuario" target="_blank">Facebook</a></small></p>
   </footer>
+
+  <script src="script.js"></script>
+</body>
 
 </html>
