Completar seccion body

--- a/views/index.html
+++ b/views/index.html
@@ -17,20 +17,16 @@
     </div>
   </div>
 
-  <!--TODO separar seccion con linea horizontal(hr) con imagenes y enlace google-->
+  <!--TODO separar seccion con linea horizontal(hr) con enlace a google site-->
 
-  <hr
-
-  <img class="foto-Ger" src="vivir_psicologia.jpg" alt="Ps Educativa"/>
-  
-  <p>Acerca de mi:</p>
-  <a href="https://sites.google.com/d/11Y4qrtDgssjxR_O3XbC0T088BZZ7QwFD/p/1BMbRaOV-dupyz7muCZoXkokPjuosQHA5/edit" target="_blank">Enlace a Google Sites</a>
+  <h2>"Acerca de mi:"</h2>
+  <p><small><a href="https://sites.google.com/d/11Y4qrtDgssjxR_O3XbC0T088BZZ7QwFD/p/1BMbRaOV-dupyz7muCZoXkokPjuosQHA5/edit" target="_blank">Enlace a Google Sites</a></small><p></p>
 
  
 
   <footer style="text-align: center; background-color: rgb(16, 211, 81); color: white">
     <h2>"Tu sonrisa es lo que mejor te queda"</h2>
-    <p><small><a href="https://instagram.com/tu_usuario" target="_blank">Instagram</a> | <a href="https://facebook.com/tu_usuario" target="_blank">Facebook</a></small></p>
+    <p><a href="https://instagram.com/tu_usuario" target="_blank">Instagram</a> | <a href="https://facebook.com/tu_usuario" target="_blank">Facebook</a></p>
   </footer>
 
   <script src="script.js"></script>
